# ZFXEngine

./: CMakeLists.txt  README.md  ZFXEngine.sln
CMake/: Config.cmake  CreateLaunchers.cmake  InstallDependencies.cmake
CMake/Templates/: ZFXConfig.h.in  perconfig.vcxproj.user.in  vcxproj.user.in
Examples/: CMakeLists.txt
Examples/playground/: CMakeLists.txt  GLDemo.cpp  GLDemo.h  main.cpp
RenderSystem/: CMakeLists.txt
RenderSystem/Direct3D9/: CMakeLists.txt
RenderSystem/OpenGL/: CMakeLists.txt
RenderSystem/OpenGL/include/: ZFXOpenGLPrerequisites.h  ZFXOpenGLRenderSystem.h
RenderSystem/OpenGL/src/: ZFXOpenGLRenderSystem.cpp
ZFX3D/: ZFX3D.vcxproj  ZFX3D.vcxproj.filters  zfx3d.h  zfxaabb.cpp  zfxcpu.cpp  zfxmatrix.cpp  zfxobb.cpp  zfxplane.cpp  zfxpolygon.cpp  zfxquat.cpp  zfxray.cpp  zfxvector.cpp
ZFXD3D/: HLSLShaderManager.cpp  HLSLShaderManager.h  ZFX3D_text.cpp  ZFXD3D.h  ZFXD3D.vcxproj  ZFXD3D.vcxproj.filters  ZFXD3D_enum.cpp  ZFXD3D_init.cpp  ZFXD3D_main.cpp  ZFXD3D_misc.cpp  ZFXD3D_skinman.cpp  ZFXD3D_skinman.h  ZFXD3D_text.cpp  ZFXD3D_vcache.cpp  ZFXD3D_vcache.h
ZFXEngine/: CMakeLists.txt  Log_ZFXRenderDevice.txt  ModelObject.cpp  ModelObject.h  ZFX.h  ZFXEngine.vcxproj  ZFXEngine.vcxproj.filters  main.cpp  main.h  s3d.cpp  s3d.h
ZFXEngine/include/: SharedPtr.h  ZFX.h  ZFXCamera.h  ZFXColorValue.h  ZFXEnum.h  ZFXFrustum.h  ZFXLight.h  ZFXLog.h  ZFXLogManager.h  ZFXMath.h  ZFXMatrix3.h  ZFXMatrix4.h  ZFXPlane.h  ZFXPlatform.h  ZFXPrerequisites.h  ZFXQuaternion.h  ZFXRenderSystem.h  ZFXRenderSystemFactory.h  ZFXRenderWindow.h  ZFXRoot.h  ZFXSharedPtr.h  ZFXVector2.h  ZFXVector3.h  ZFXVector4.h  ZFXViewport.h
ZFXEngine/model/: monkey.mtl  sphere.mtl  uvcube2.mtl
ZFXEngine/shader/: shader.frag  shader.vert
ZFXEngine/src/: ZFXCamera.cpp  ZFXColorValue.cpp  ZFXFrustum.cpp  ZFXLight.cpp  ZFXLog.cpp  ZFXLogManager.cpp  ZFXMath.cpp  ZFXMatrix3.cpp  ZFXMatrix4.cpp  ZFXPlane.cpp  ZFXQuaternion.cpp  ZFXRenderSystem.cpp  ZFXRenderSystemFactory.cpp  ZFXRenderWindow.cpp  ZFXRoot.cpp  ZFXVector2.cpp  ZFXVector3.cpp  ZFXVector4.cpp  ZFXViewport.cpp
ZFXOpenGL/: ZFXGLPrerequisites.h  ZFXGLSL.cpp  ZFXGLSL.h  ZFXOpenGL.cpp  ZFXOpenGL.h  ZFXOpenGL.vcxproj  ZFXOpenGL.vcxproj.filters  ZFXOpenGL_Skin.cpp  ZFXOpenGL_Skin.h  ZFXOpenGL_VCM.cpp  ZFXOpenGL_VCM.h
ZFXRenderer/: ZFX.h  ZFXD3D_skinman.h  ZFXFontManager.cpp  ZFXFontManager.h  ZFXInclude.h  ZFXPrerequisites.h  ZFXRenderDevice.h  ZFXRenderer.cpp  ZFXRenderer.h  ZFXRenderer.vcxproj  ZFXRenderer.vcxproj.filters  ZFXShaderManager.cpp  ZFXShaderManager.h
ZFXUtil/: ITimer.h  ZFXUtil.cpp  ZFXUtil.h  ZFXUtil.vcxproj  ZFXUtil.vcxproj.filters
ZFXUtil/Win32/: Win32Timer.cpp  Win32Timer.h
